# deepseek-cli-rs

./: .gitignore  Cargo.toml  DEEPSEEK.md
.github/workflows/: rust.yml
src/: main.rs  tools.rs
tests/: browser_tools.rs
