[package]
name = "deepseek-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
deepseek-api = { git = "https://github.com/meanwhile131/deepseek-api-rs.git" }  # latest commit on default branch
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0.95"
futures-util = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
colored = "3.0.0"
rustyline = "17.0.0"
dirs = "6.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1