[package]
name = "deepseek-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
deepseek-api = { git = "https://github.com/meanwhile131/deepseek-api-rs.git" }  # latest commit on default branch
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0.101"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
colored = "3.1.1"
rustyline = "17.0.2"
dirs = "6.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
