[package]
name = "deepseek-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deepseek"
path = "src/main.rs"

[dependencies]
deepseek-api = { git = "https://github.com/meanwhile131/deepseek-api-rs.git" }  # latest commit on default branch
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0.101"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
colored = "3.1.1"
rustyline = "17.0.2"
dirs = "6.0.0"
reqwest = "0.12"
scraper = "0.22"
urlencoding = "2.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
